--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
+  color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.App-header {
+  margin: 20px;
 }
 
 .App-link {
   color: #61dafb;
+  text-decoration: none;
+  font-size: 1.2em;
+  margin: 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-link:hover {
+  text-decoration: underline;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+h1, h2 {
+  margin: 20px 0;
+}
+
+section {
+  margin: 20px 0;
+}
+
+h2 {
+  margin: 10px 0;
+}
+
+.portfolio-item {
+  margin: 10px 0;
+}
+
+.portfolio-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.portfolio-title {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.portfolio-details {
+  display: flex;
+  gap: 10px;
+}
+
+.portfolio-language,
+.portfolio-library,
+.portfolio-platform {
+  font-style: italic;
+  color: #a9a9a9;
+}
+
+.account-item {
+  margin: 10px 0;
 }
